Reconfigured index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
@@ -19,5 +20,7 @@
     </div>
     <button onclick="resetBoard()">Reset</button>
     <script src="script.js"></script>
+    <script src="service-worker.js"></script>
 </body>
 </html>
+
