--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="cell" onclick="makeMove(7)"></div>
         <div class="cell" onclick="makeMove(8)"></div>
     </div>
-    <button onclick="resetBoard()">Reset</button>
+    <button onclick="resetGame()">Reset</button>
     <script src="script.js"></script>
     <script src="service-worker.js"></script>
 </body>
